--- a/nerin_final_updated/frontend/components/np-footer.html
+++ b/nerin_final_updated/frontend/components/np-footer.html
@@ -39,7 +39,7 @@
 
       <div class="np-footer__meta">
         <div class="np-footer__social" hidden></div>
-        <div class="np-footer__badges" hidden></div>
+        <div class="np-footer__badges footer-badges" hidden></div>
         <div class="np-footer__legal" hidden></div>
       </div>
     </div>
